prod.provider-crypto.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provider-crypto
  namespace: chaos-app
  labels:
    app: provider-crypto
spec:
  replicas: 2
  selector:
    matchLabels:
      app: provider-crypto
  template:
    metadata:
      labels:
        app: provider-crypto
    spec:
      containers:
        - name: provider-crypto
          image: docker.io/korpatiy/finance-dashboard-provider-crypto:v0.3.3-dev
          ports:
            - containerPort: 9091
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: provider-crypto
  namespace: chaos-app
spec:
  selector:
    app: provider-crypto
  ports:
    - name: http
      protocol: TCP
      port: 9091
      targetPort: 9091
    - name: grpc
      protocol: TCP
      port: 9092
      targetPort: 9092
