prod.provider-stocks.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provider-stocks
  namespace: chaos-app
  labels:
    app: provider-stocks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: provider-stocks
  template:
    metadata:
      labels:
        app: provider-stocks
    spec:
      containers:
        - name: provider-stocks
          image: docker.io/iskorotkov/finance-dashboard-provider-stocks:v0.1.0-dev
          ports:
            - containerPort: 8081
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: provider-stocks
  namespace: chaos-app
spec:
  selector:
    app: provider-stocks
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: grpc
      protocol: TCP
      port: 8082
      targetPort: 8082
  type: LoadBalancer
